force-app/main/default/objects/Conversation_Value__c/Conversation_Value__c.object-meta.xml
<CustomObject>
    <label>Conversation Value</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Conversation Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversation Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>