force-app/main/default/objects/Conversation_Value__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>This field is used to house the Reason values from Smart2 (SGPRT-4003)</description>
    <inlineHelpText>Choose the Conversation Reason</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>