force-app/main/default/objects/Conversation_Value__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>This field is used to house the Response values from Smart2 (SGPRT-4003)</description>
    <inlineHelpText>Choose the Conversation Response</inlineHelpText>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>