force-app/main/default/objects/Conversation_Value__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>This field is used to house the Sub-Category values from Smart2 (SGPRT-4003)</description>
    <inlineHelpText>Smart2 Conversations Category</inlineHelpText>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>