force-app/main/default/objects/Conversation_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Sub_Category__c</columns>
    <columns>Response__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>